--- a/batch-processing-demo/src/main/resources/application.properties
+++ b/batch-processing-demo/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/springbatchdb
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password= XXXX
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+server.port= 9091
+spring.batch.initialize-schema=ALWAYS
+
+# disabled job run at start up
+spring.batch.job.enabled=false
